--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -5,20 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:elevation="4dp"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/list_item_new_thumb"
-        android:layout_width="150dp"
-        android:layout_height="170dp"
-        android:paddingLeft="16dp"
-        android:layout_centerHorizontal="true" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="7"
         android:orientation="vertical">
 
         <TextView
@@ -28,7 +24,7 @@
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="16dp"
             android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/grey" />
+            android:textColor="@color/grey_500" />
 
         <TextView
             android:id="@+id/list_item_news_title"
@@ -36,25 +32,21 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="16dp"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
-    <!--<TextView-->
-    <!--android:id="@+id/list_item_score_team2"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fontFamily="sans-serif-condensed"-->
-    <!--android:text="SA 150/4"-->
-    <!--android:textAppearance="?android:textAppearanceLarge" />-->
+    <FrameLayout
+        android:layout_width="150dp"
+        android:layout_height="wrap_content">
 
-    <!--<TextView-->
-    <!--android:id="@+id/list_item_match_result"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:fontFamily="sans-serif-condensed"-->
-    <!--android:text="SA won by 49 runs"-->
-    <!--android:textAppearance="?android:textAppearanceSmall" />-->
+        <ImageView
+            android:id="@+id/list_item_new_thumb"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:paddingLeft="16dp" />
+    </FrameLayout>
 
 </LinearLayout>
