--- a/app/src/main/res/layout/list_item_ongoing_matches.xml
+++ b/app/src/main/res/layout/list_item_ongoing_matches.xml
@@ -4,44 +4,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:elevation="4dp"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:orientation="vertical"
-    android:background="@color/white"
-    >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/list_item_series"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="16dp"
         android:fontFamily="sans-serif-condensed"
-        android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/black"/>
-
-    <!--<TextView-->
-        <!--android:id="@+id/list_item_score_team1"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:text="Eng 149/9"-->
-        <!--android:textAppearance="?android:textAppearanceLarge" />-->
-
-
-    <!--<TextView-->
-        <!--android:id="@+id/list_item_score_team2"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:text="SA 150/4"-->
-        <!--android:textAppearance="?android:textAppearanceLarge" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/list_item_match_result"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:fontFamily="sans-serif-condensed"-->
-        <!--android:text="SA won by 49 runs"-->
-        <!--android:textAppearance="?android:textAppearanceSmall" />-->
+        android:paddingLeft="16dp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textColor="@color/black" />
 
 </LinearLayout>
