--- a/app/src/main/res/layout/list_item_ongoing_matches_detail.xml
+++ b/app/src/main/res/layout/list_item_ongoing_matches_detail.xml
@@ -2,48 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:elevation="4dp"
-    android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/scores_matchno"
+            android:id="@+id/ongoing_matches_matchno"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="16dp"
             android:text="2ND TEST AT"
             android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/grey_500" />
+            android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/scores_venue"
+            android:id="@+id/ongoing_matches_venue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="2dp"
             android:text="COLOMBO"
             android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/grey_500" />
+            android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/scores_date"
+            android:id="@+id/ongoing_matches_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="2dp"
             android:text=", AUG 20-25, 2015"
             android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@color/grey_500" />
+            android:textColor="@color/black" />
 
     </LinearLayout>
 
@@ -53,36 +47,27 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/scores_team1"
+            android:id="@+id/ongoing_matches_team1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="16dp"
             android:text="SL"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/scores_team1_score"
+            android:id="@+id/ongoing_matches_team1_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="2dp"
             android:text=" 393/9"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/grey_700" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,40 +75,37 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/scores_team2"
+            android:id="@+id/ongoing_matches_team2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="16dp"
             android:text="IND"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@color/black" />
 
         <TextView
-            android:id="@+id/scores_team2_score"
+            android:id="@+id/ongoing_matches_team2_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:paddingBottom="8dp"
             android:paddingLeft="2dp"
             android:text=" 400/2"
-            android:textAppearance="?android:textAppearanceMedium"
+            android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/scores_result"
+        android:id="@+id/ongoing_matches_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey_700"
+        android:background="@color/grey"
         android:fontFamily="sans-serif-condensed"
-        android:paddingBottom="8dp"
         android:paddingLeft="16dp"
-        android:paddingTop="8dp"
         android:text="SA won by 49 runs"
         android:textAppearance="?android:textAppearanceSmall"
-        android:textColor="@color/black" />
+        android:textStyle="bold" />
 
 </LinearLayout>
