--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="white">#FFFFFF</color>
     <color name="grey">#cccccc</color>
-    <color name="grey_700">#646464</color>
+    <color name="grey_700">#c0c0c0</color>
+    <color name="grey_500">#a3a3a3</color>
     <color name="black">#000000</color>
 
     <color name="primaryDark">#1976D2</color>
